--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   </body>
 </html>
